--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.minikube.sample</groupId>
-    <artifactId>kubernetes-configmap-reload</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>kalyan</artifactId>
+    <version>0.0.1</version>
     <packaging>jar</packaging>
     <name>minikube-sample</name>
     <description>Demo project for Spring Cloud Kubernetes</description>
